--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.8",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
+  },
+  "experiment": {
+    "topLevelAwait": true
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,6 +30,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    
     "extends": [
       "react-app",
       "react-app/jest"
@@ -34,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
